# Simulation-Based-Risk-Metrics-and-Derivative-Pricing-Framework

./: .gitignore  CMakeLists.txt  README.md  implied_volatility.cpp
Black-Scholes/: Black_Scholes.ipynb  data.csv
Heston/: Heston.cpp  HestonMonteCarlo  Heston_CF_cos.cpp  Heston_with_monte_carlo.cpp
Heston/HestonMonteCarlo.dSYM/Contents/: Info.plist
Heston/HestonMonteCarlo.dSYM/Contents/Resources/DWARF/: HestonMonteCarlo
Heston/HestonMonteCarlo.dSYM/Contents/Resources/Relocations/aarch64/: HestonMonteCarlo.yml
Heston/output/: Heston  Heston_CF_cos  Heston_with_monte_carlo
Heston/output/Heston.dSYM/Contents/: Info.plist
Heston/output/Heston.dSYM/Contents/Resources/DWARF/: Heston
Heston/output/Heston.dSYM/Contents/Resources/Relocations/aarch64/: Heston.yml
Heston/output/Heston_CF_cos.dSYM/Contents/: Info.plist
Heston/output/Heston_CF_cos.dSYM/Contents/Resources/DWARF/: Heston_CF_cos
Heston/output/Heston_CF_cos.dSYM/Contents/Resources/Relocations/aarch64/: Heston_CF_cos.yml
Heston/output/Heston_with_monte_carlo.dSYM/Contents/: Info.plist
Heston/output/Heston_with_monte_carlo.dSYM/Contents/Resources/DWARF/: Heston_with_monte_carlo
Heston/output/Heston_with_monte_carlo.dSYM/Contents/Resources/Relocations/aarch64/: Heston_with_monte_carlo.yml
data/: all_calls_data.csv  all_puts_data.csv  data_for_project.csv  data_preparation.ipynb
include/: AmericanOptionPricer.h  AssetPathGenerator.h  Cva.h  Delta.h  EuropeanOption.h  EuropeanTypeAsianOptionPricer.h  EuropeanTypeBarrierDownInOptionPricer.h  EuropeanTypeBarrierDownOutOptionPricer.h  EuropeanTypeBarrierUpInOptionPricer.h  EuropeanTypeBarrierUpOutOptionPricer.h  EuropeanTypeLookBackOptionPricer.h  EuropeanTypeVanillaOptionPricer.h  ExceptedExposure.h  Exposure.h  Gamma.h  Greeks.h  HestonModel.h  Longstaff_Schwartz.h  OptionPricer.h  PotentialFutureExposure.h  Rho.h  RiskMetrics.h  Theta.h  VarianceGenerator.h  Vega.h  XVAmetrics.h  csv.h  lmm.h  plot.h
output/: Heston_Model_with_Monte_Carlo_simulation  implied_volatility  vol
output/Heston_Model_with_Monte_Carlo_simulation.dSYM/Contents/: Info.plist
output/Heston_Model_with_Monte_Carlo_simulation.dSYM/Contents/Resources/DWARF/: Heston_Model_with_Monte_Carlo_simulation
output/Heston_Model_with_Monte_Carlo_simulation.dSYM/Contents/Resources/Relocations/aarch64/: Heston_Model_with_Monte_Carlo_simulation.yml
output/implied_volatility.dSYM/Contents/: Info.plist
output/implied_volatility.dSYM/Contents/Resources/DWARF/: implied_volatility
output/implied_volatility.dSYM/Contents/Resources/Relocations/aarch64/: implied_volatility.yml
output/vol.dSYM/Contents/: Info.plist
output/vol.dSYM/Contents/Resources/DWARF/: vol
output/vol.dSYM/Contents/Resources/Relocations/aarch64/: vol.yml
src/: EuropeanTypeBarrierDownInOptionPricer.cpp  EuropeanTypeBarrierDownOutOptionPricer.cpp  EuropeanTypeBarrierUpInOptionPricer.cpp  EuropeanTypeBarrierUpOutOptionPricer.cpp  EuropeanTypeOptionPricer.cpp  HestonModel.h  Heston_Model_with_Monte_Carlo_simulation.cpp  Longstaff_Schwartz.h  Longstaff_Schwartz_LSM.cpp  csv.cpp  lmm.cpp  lmm.h  main.cpp  out  plot.cpp  test.cpp
src/AmericanOption/: AmericanOptionPricer.cpp
src/Asian/: EuropeanTypeAsianOptionPricer.cpp
src/Barrier/: EuropeanTypeBarrierDownInOptionPricer.cpp  EuropeanTypeBarrierDownOutOptionPricer.cpp  EuropeanTypeBarrierUpInOptionPricer.cpp  EuropeanTypeBarrierUpOutOptionPricer.cpp
src/Greeks/: Delta.cpp  Gamma.cpp  Rho.cpp  Theta.cpp  Vega.cpp
src/HelperFunctions/: GetterandSetter.cpp
src/LookBack/: EuropeanTypeLookBackOptionPricer.cpp
src/PathGenerator/: PathGenerator.cpp
src/RiskMetrics/: Cva.cpp  ExceptedExposure.cpp  Exposure.cpp  PotentialFutureExposure.cpp  test.cpp
src/Vanilla/: EuropeanTypeVanillaOptionPricer.cpp
src/bindings/: european_plain_vanilla_bindings.cpp
src/output/: Heston_Model_with_Monte_Carlo_simulation
src/output/Heston_Model_with_Monte_Carlo_simulation.dSYM/Contents/Resources/DWARF/: Heston_Model_with_Monte_Carlo_simulation
src/output/Heston_Model_with_Monte_Carlo_simulation.dSYM/Contents/Resources/Relocations/aarch64/: Heston_Model_with_Monte_Carlo_simulation.yml
src/output/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
